Added Vectors to the DS implementation

--- a/Makefile-DS
+++ b/Makefile-DS
@@ -16,7 +16,7 @@ include $(DEVKITARM)/ds_rules
 #---------------------------------------------------------------------------------
 TARGET		:=	$(shell basename $(CURDIR))
 BUILD		:=	build
-SOURCES		:=	source-DS
+SOURCES		:=	source-DS source-DS/Backend/
 DATA		:=  	
 INCLUDES	:=	source-DS
 GRAPHICS	:=	assets/gfx/
