--- a/Makefile-DS
+++ b/Makefile-DS
@@ -16,9 +16,9 @@ include $(DEVKITARM)/ds_rules
 #---------------------------------------------------------------------------------
 TARGET		:=	$(shell basename $(CURDIR))
 BUILD		:=	build
-SOURCES		:=	source-DS source-DS/Backend/
+SOURCES		:=	source-DS/ source-DS/Backend/ source/World/ source/Input/ source/World/Elements/ source/World/Generator
 DATA		:=  	
-INCLUDES	:=	source-DS
+INCLUDES	:=	source-DS/ source/
 GRAPHICS	:=	assets/gfx/
 
 #---------------------------------------------------------------------------------
@@ -28,11 +28,11 @@ ARCH	:=	-mthumb -mthumb-interwork
 
 CFLAGS	:=	-g -Wall -O2\
  			-march=armv5te -mtune=arm946e-s -fomit-frame-pointer\
-			-ffast-math \
+			-ffast-math -DTARGET_DS\
 			$(ARCH)
 
 CFLAGS	+=	$(INCLUDE) -DARM9
-CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions
+CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions -std=c++11
 
 ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=ds_arm9.specs -g $(ARCH)  -Wl,-Map,$(notdir $*.map)
